lawlib/fixtures/invalid/import_missing.dsl
law MissingImportExample
authority private
enacted 2025-01-01

import "does_not_exist.dsl"
